src/test/ui/consts/match_ice.stderr
error[E0004]: non-exhaustive patterns: `&S` not covered
  --> $DIR/match_ice.rs:8:11
   |
LL |     match C {
   |           ^ pattern `&S` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0277]: can't compare `S` with `S`
   |
   = help: the trait `std::cmp::PartialEq` is not implemented for `S`
   = note: required because of the requirements on the impl of `std::cmp::PartialEq` for `&S`

error: aborting due to 2 previous errors

Some errors occurred: E0004, E0277.
For more information about an error, try `rustc --explain E0004`.
